# CyclicTasks

./: .gitignore  How-to-run.md  README.md  credits.md  docker-compose.yml  docker-tag-push.bat  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ghpages.yml
Backend/: .dockerignore  .env.txt  Dockerfile  INFO.txt  Pipfile  main.py  pyproject.toml
Backend/CyclicTasks/: CyclicTasks.py  FlaskAPI.py  FlaskApp.py  __init__.py
Backend/CyclicTasks/FlaskBlueprints/: Admin.py  Tasks.py  Users.py
Backend/CyclicTasks/FlaskBlueprints/lib/: ValidateIncomingTask.py  ValidateUser.py
Backend/CyclicTasks/api_endpoints/ADMIN/GetRunningTasks/: GetRunningTasks.py
Backend/CyclicTasks/api_endpoints/DeleteTask/: DeleteTask.py
Backend/CyclicTasks/api_endpoints/Entry/: Entry.py
Backend/CyclicTasks/api_endpoints/NewTask/: NewTask.py
Backend/CyclicTasks/api_endpoints/UpdateTask/: UpdateTask.py
Backend/CyclicTasks/config/: GoogleCloudLogging.py  firebase.py
Backend/CyclicTasks/lib/: Authentication.py  Discord.py  Email.py  Firestore.py  GetIstTime.py  Logger.py  ValidateIncomingTask.py  VerifyRecaptcha.py  email_template.py
CyclicTasks/: CyclicTasks.py  FlaskApp.py  __init__.py
CyclicTasks/config/: firebase.py
CyclicTasks/lib/: Discord.py  Firestore.py
Frontend/: .dockerignore  .env.production  .env.txt  Dockerfile  deploys.bat  index.html  package-lock.json  package.json
Frontend/src/: App.css  App.jsx  index.css  main.jsx
Frontend/src/Components/EachTask/: EachTask.css  (+1 more)
Frontend/src/config/: firebase.js
Frontend/src/scripts/: Session.js  getTasks.js
(+58 files in other folders)
