[tool.poetry]
name = "cyclictasks"
version = "0.1.0"
description = "A service to run various tasks on a fixed interval"
authors = ["DarkGlance <darkglance.developer@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
firebase-admin = "^6.5.0"
aiohttp = "^3.10.5"
flask = {extras = ["async"], version = "^3.0.3"}
flask-cors = "^5.0.0"
google-cloud-logging = "^3.11.2"
hypercorn = "^0.17.3"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
